SetLan/parser.out
shift/reduce conflict in state 6 resolved as shift.
shift/reduce conflict in state 116 resolved as shift.
shift/reduce conflict in state 120 resolved as shift.
shift/reduce conflict in state 121 resolved as shift.
shift/reduce conflict in state 125 resolved as shift.
shift/reduce conflict in state 126 resolved as shift.
shift/reduce conflict in state 134 resolved as shift.
shift/reduce conflict in state 137 resolved as shift.


Unused terminals:

   Return
   Colon
   Arrow
   Def
   Comment

Grammar

Rule 1     program -> Program statement
Rule 2     statement -> ID Assign expression
Rule 3     statement -> OpenCurly statement_list SemiColon CloseCurly
Rule 4     statement -> OpenCurly Using declarations_list SemiColon In statement_list CloseCurly
Rule 5     statement -> <empty>
Rule 6     declarations_list -> type variable_list
Rule 7     declarations_list -> declarations_list SemiColon type variable_list
Rule 8     variable_list -> ID
Rule 9     variable_list -> variable_list Comma ID
Rule 10    statement_list -> statement
Rule 11    statement_list -> statement_list SemiColon statement
Rule 12    type -> Int
Rule 13    type -> Bool
Rule 14    type -> Set
Rule 15    statement -> Scan ID
Rule 16    statement -> Print expression_list
Rule 17    statement -> Println expression_list
Rule 18    expression_list -> expression
Rule 19    expression_list -> expression_list Comma expression
Rule 20    statement -> If OpenParen expression CloseParen statement
Rule 21    statement -> If OpenParen expression CloseParen statement Else statement
Rule 22    statement -> For ID Min expression Do statement
Rule 23    statement -> For ID Max expression Do statement
Rule 24    statement -> Repeat statement While OpenParen expression CloseParen Do statement
Rule 25    statement -> Repeat statement While OpenParen expression CloseParen
Rule 26    statement -> While OpenParen expression CloseParen Do statement
Rule 27    expression -> Number
Rule 28    expression -> True
Rule 29    expression -> False
Rule 30    expression -> String
Rule 31    expression -> ID
Rule 32    number_list -> Number
Rule 33    number_list -> number_list Comma Number
Rule 34    set_elements_list -> Number
Rule 35    set_elements_list -> ID
Rule 36    set_elements_list -> set_elements_list Comma Number
Rule 37    set_elements_list -> set_elements_list Comma ID
Rule 38    expression -> OpenCurly set_elements_list CloseCurly
Rule 39    expression -> OpenParen expression CloseParen
Rule 40    expression -> expression Plus expression
Rule 41    expression -> expression Minus expression
Rule 42    expression -> expression Times expression
Rule 43    expression -> expression Div expression
Rule 44    expression -> expression Mod expression
Rule 45    expression -> expression PlusSet expression
Rule 46    expression -> expression MinusSet expression
Rule 47    expression -> expression TimesSet expression
Rule 48    expression -> expression DivSet expression
Rule 49    expression -> expression ModSet expression
Rule 50    expression -> expression LessThan expression
Rule 51    expression -> expression LessThanEq expression
Rule 52    expression -> expression GreaterThan expression
Rule 53    expression -> expression GreaterThanEq expression
Rule 54    expression -> expression Equals expression
Rule 55    expression -> expression NotEquals expression
Rule 56    expression -> expression Union expression
Rule 57    expression -> expression Difference expression
Rule 58    expression -> expression Intersect expression
Rule 59    expression -> expression And expression
Rule 60    expression -> expression Or expression
Rule 61    expression -> expression Contains expression
Rule 62    expression -> Minus expression
Rule 63    expression -> Not expression
Rule 64    expression -> Len expression
Rule 65    expression -> MaxSet expression
Rule 66    expression -> MinSet expression

Terminals, with rules where they appear

And                  : 59
Arrow                : 
Assign               : 2
Bool                 : 13
CloseCurly           : 3 4 38
CloseParen           : 20 21 24 25 26 39
Colon                : 
Comma                : 9 19 33 36 37
Comment              : 
Contains             : 61
Def                  : 
Difference           : 57
Div                  : 43
DivSet               : 48
Do                   : 22 23 24 26
Else                 : 21
Equals               : 54
False                : 29
For                  : 22 23
GreaterThan          : 52
GreaterThanEq        : 53
ID                   : 2 8 9 15 22 23 31 35 37
If                   : 20 21
In                   : 4
Int                  : 12
Intersect            : 58
Len                  : 64
LessThan             : 50
LessThanEq           : 51
Max                  : 23
MaxSet               : 65
Min                  : 22
MinSet               : 66
Minus                : 41 62
MinusSet             : 46
Mod                  : 44
ModSet               : 49
Not                  : 63
NotEquals            : 55
Number               : 27 32 33 34 36
OpenCurly            : 3 4 38
OpenParen            : 20 21 24 25 26 39
Or                   : 60
Plus                 : 40
PlusSet              : 45
Print                : 16
Println              : 17
Program              : 1
Repeat               : 24 25
Return               : 
Scan                 : 15
SemiColon            : 3 4 7 11
Set                  : 14
String               : 30
Times                : 42
TimesSet             : 47
True                 : 28
Union                : 56
Using                : 4
While                : 24 25 26
error                : 

Nonterminals, with rules where they appear

declarations_list    : 4 7
expression           : 2 18 19 20 21 22 23 24 25 26 39 40 40 41 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 58 59 59 60 60 61 61 62 63 64 65 66
expression_list      : 16 17 19
number_list          : 33
program              : 0
set_elements_list    : 36 37 38
statement            : 1 10 11 20 21 21 22 23 24 24 25 26
statement_list       : 3 4 11
type                 : 6 7
variable_list        : 6 7 9


Parsing method: LALR


state 0

    (0) S' -> . program
    (1) program -> . Program statement

    Program         shift and go to state 1


    program                        shift and go to state 2

state 1

    (1) program -> Program . statement
    (2) statement -> . ID Assign expression
    (3) statement -> . OpenCurly statement_list SemiColon CloseCurly
    (4) statement -> . OpenCurly Using declarations_list SemiColon In statement_list CloseCurly
    (5) statement -> .
    (15) statement -> . Scan ID
    (16) statement -> . Print expression_list
    (17) statement -> . Println expression_list
    (20) statement -> . If OpenParen expression CloseParen statement
    (21) statement -> . If OpenParen expression CloseParen statement Else statement
    (22) statement -> . For ID Min expression Do statement
    (23) statement -> . For ID Max expression Do statement
    (24) statement -> . Repeat statement While OpenParen expression CloseParen Do statement
    (25) statement -> . Repeat statement While OpenParen expression CloseParen
    (26) statement -> . While OpenParen expression CloseParen Do statement

    ID              shift and go to state 10
    OpenCurly       shift and go to state 3
    $end            reduce using rule 5 (statement -> .)
    Scan            shift and go to state 11
    Print           shift and go to state 5
    Println         shift and go to state 9
    If              shift and go to state 12
    For             shift and go to state 4
    Repeat          shift and go to state 6
    While           shift and go to state 8


    statement                      shift and go to state 7

state 2

    (0) S' -> program .




state 3

    (3) statement -> OpenCurly . statement_list SemiColon CloseCurly
    (4) statement -> OpenCurly . Using declarations_list SemiColon In statement_list CloseCurly
    (10) statement_list -> . statement
    (11) statement_list -> . statement_list SemiColon statement
    (2) statement -> . ID Assign expression
    (3) statement -> . OpenCurly statement_list SemiColon CloseCurly
    (4) statement -> . OpenCurly Using declarations_list SemiColon In statement_list CloseCurly
    (5) statement -> .
    (15) statement -> . Scan ID
    (16) statement -> . Print expression_list
    (17) statement -> . Println expression_list
    (20) statement -> . If OpenParen expression CloseParen statement
    (21) statement -> . If OpenParen expression CloseParen statement Else statement
    (22) statement -> . For ID Min expression Do statement
    (23) statement -> . For ID Max expression Do statement
    (24) statement -> . Repeat statement While OpenParen expression CloseParen Do statement
    (25) statement -> . Repeat statement While OpenParen expression CloseParen
    (26) statement -> . While OpenParen expression CloseParen Do statement

    Using           shift and go to state 14
    ID              shift and go to state 10
    OpenCurly       shift and go to state 3
    SemiColon       reduce using rule 5 (statement -> .)
    Scan            shift and go to state 11
    Print           shift and go to state 5
    Println         shift and go to state 9
    If              shift and go to state 12
    For             shift and go to state 4
    Repeat          shift and go to state 6
    While           shift and go to state 8


    statement_list                 shift and go to state 15
    statement                      shift and go to state 13

state 4

    (22) statement -> For . ID Min expression Do statement
    (23) statement -> For . ID Max expression Do statement

    ID              shift and go to state 16



state 5

    (16) statement -> Print . expression_list
    (18) expression_list -> . expression
    (19) expression_list -> . expression_list Comma expression
    (27) expression -> . Number
    (28) expression -> . True
    (29) expression -> . False
    (30) expression -> . String
    (31) expression -> . ID
    (38) expression -> . OpenCurly set_elements_list CloseCurly
    (39) expression -> . OpenParen expression CloseParen
    (40) expression -> . expression Plus expression
    (41) expression -> . expression Minus expression
    (42) expression -> . expression Times expression
    (43) expression -> . expression Div expression
    (44) expression -> . expression Mod expression
    (45) expression -> . expression PlusSet expression
    (46) expression -> . expression MinusSet expression
    (47) expression -> . expression TimesSet expression
    (48) expression -> . expression DivSet expression
    (49) expression -> . expression ModSet expression
    (50) expression -> . expression LessThan expression
    (51) expression -> . expression LessThanEq expression
    (52) expression -> . expression GreaterThan expression
    (53) expression -> . expression GreaterThanEq expression
    (54) expression -> . expression Equals expression
    (55) expression -> . expression NotEquals expression
    (56) expression -> . expression Union expression
    (57) expression -> . expression Difference expression
    (58) expression -> . expression Intersect expression
    (59) expression -> . expression And expression
    (60) expression -> . expression Or expression
    (61) expression -> . expression Contains expression
    (62) expression -> . Minus expression
    (63) expression -> . Not expression
    (64) expression -> . Len expression
    (65) expression -> . MaxSet expression
    (66) expression -> . MinSet expression

    Number          shift and go to state 28
    True            shift and go to state 23
    False           shift and go to state 26
    String          shift and go to state 20
    ID              shift and go to state 25
    OpenCurly       shift and go to state 17
    OpenParen       shift and go to state 24
    Minus           shift and go to state 21
    Not             shift and go to state 22
    Len             shift and go to state 18
    MaxSet          shift and go to state 29
    MinSet          shift and go to state 19


    expression_list                shift and go to state 27
    expression                     shift and go to state 30

state 6

    (24) statement -> Repeat . statement While OpenParen expression CloseParen Do statement
    (25) statement -> Repeat . statement While OpenParen expression CloseParen
    (2) statement -> . ID Assign expression
    (3) statement -> . OpenCurly statement_list SemiColon CloseCurly
    (4) statement -> . OpenCurly Using declarations_list SemiColon In statement_list CloseCurly
    (5) statement -> .
    (15) statement -> . Scan ID
    (16) statement -> . Print expression_list
    (17) statement -> . Println expression_list
    (20) statement -> . If OpenParen expression CloseParen statement
    (21) statement -> . If OpenParen expression CloseParen statement Else statement
    (22) statement -> . For ID Min expression Do statement
    (23) statement -> . For ID Max expression Do statement
    (24) statement -> . Repeat statement While OpenParen expression CloseParen Do statement
    (25) statement -> . Repeat statement While OpenParen expression CloseParen
    (26) statement -> . While OpenParen expression CloseParen Do statement

  ! shift/reduce conflict for While resolved as shift.
    ID              shift and go to state 10
    OpenCurly       shift and go to state 3
    Scan            shift and go to state 11
    Print           shift and go to state 5
    Println         shift and go to state 9
    If              shift and go to state 12
    For             shift and go to state 4
    Repeat          shift and go to state 6
    While           shift and go to state 8

  ! While           [ reduce using rule 5 (statement -> .) ]

    statement                      shift and go to state 31

state 7

    (1) program -> Program statement .

    $end            reduce using rule 1 (program -> Program statement .)



state 8

    (26) statement -> While . OpenParen expression CloseParen Do statement

    OpenParen       shift and go to state 32



state 9

    (17) statement -> Println . expression_list
    (18) expression_list -> . expression
    (19) expression_list -> . expression_list Comma expression
    (27) expression -> . Number
    (28) expression -> . True
    (29) expression -> . False
    (30) expression -> . String
    (31) expression -> . ID
    (38) expression -> . OpenCurly set_elements_list CloseCurly
    (39) expression -> . OpenParen expression CloseParen
    (40) expression -> . expression Plus expression
    (41) expression -> . expression Minus expression
    (42) expression -> . expression Times expression
    (43) expression -> . expression Div expression
    (44) expression -> . expression Mod expression
    (45) expression -> . expression PlusSet expression
    (46) expression -> . expression MinusSet expression
    (47) expression -> . expression TimesSet expression
    (48) expression -> . expression DivSet expression
    (49) expression -> . expression ModSet expression
    (50) expression -> . expression LessThan expression
    (51) expression -> . expression LessThanEq expression
    (52) expression -> . expression GreaterThan expression
    (53) expression -> . expression GreaterThanEq expression
    (54) expression -> . expression Equals expression
    (55) expression -> . expression NotEquals expression
    (56) expression -> . expression Union expression
    (57) expression -> . expression Difference expression
    (58) expression -> . expression Intersect expression
    (59) expression -> . expression And expression
    (60) expression -> . expression Or expression
    (61) expression -> . expression Contains expression
    (62) expression -> . Minus expression
    (63) expression -> . Not expression
    (64) expression -> . Len expression
    (65) expression -> . MaxSet expression
    (66) expression -> . MinSet expression

    Number          shift and go to state 28
    True            shift and go to state 23
    False           shift and go to state 26
    String          shift and go to state 20
    ID              shift and go to state 25
    OpenCurly       shift and go to state 17
    OpenParen       shift and go to state 24
    Minus           shift and go to state 21
    Not             shift and go to state 22
    Len             shift and go to state 18
    MaxSet          shift and go to state 29
    MinSet          shift and go to state 19


    expression_list                shift and go to state 33
    expression                     shift and go to state 30

state 10

    (2) statement -> ID . Assign expression

    Assign          shift and go to state 34



state 11

    (15) statement -> Scan . ID

    ID              shift and go to state 35



state 12

    (20) statement -> If . OpenParen expression CloseParen statement
    (21) statement -> If . OpenParen expression CloseParen statement Else statement

    OpenParen       shift and go to state 36



state 13

    (10) statement_list -> statement .

    SemiColon       reduce using rule 10 (statement_list -> statement .)
    CloseCurly      reduce using rule 10 (statement_list -> statement .)



state 14

    (4) statement -> OpenCurly Using . declarations_list SemiColon In statement_list CloseCurly
    (6) declarations_list -> . type variable_list
    (7) declarations_list -> . declarations_list SemiColon type variable_list
    (12) type -> . Int
    (13) type -> . Bool
    (14) type -> . Set

    Int             shift and go to state 38
    Bool            shift and go to state 40
    Set             shift and go to state 37


    type                           shift and go to state 41
    declarations_list              shift and go to state 39

state 15

    (3) statement -> OpenCurly statement_list . SemiColon CloseCurly
    (11) statement_list -> statement_list . SemiColon statement

    SemiColon       shift and go to state 42



state 16

    (22) statement -> For ID . Min expression Do statement
    (23) statement -> For ID . Max expression Do statement

    Min             shift and go to state 43
    Max             shift and go to state 44



state 17

    (38) expression -> OpenCurly . set_elements_list CloseCurly
    (34) set_elements_list -> . Number
    (35) set_elements_list -> . ID
    (36) set_elements_list -> . set_elements_list Comma Number
    (37) set_elements_list -> . set_elements_list Comma ID

    Number          shift and go to state 46
    ID              shift and go to state 47


    set_elements_list              shift and go to state 45

state 18

    (64) expression -> Len . expression
    (27) expression -> . Number
    (28) expression -> . True
    (29) expression -> . False
    (30) expression -> . String
    (31) expression -> . ID
    (38) expression -> . OpenCurly set_elements_list CloseCurly
    (39) expression -> . OpenParen expression CloseParen
    (40) expression -> . expression Plus expression
    (41) expression -> . expression Minus expression
    (42) expression -> . expression Times expression
    (43) expression -> . expression Div expression
    (44) expression -> . expression Mod expression
    (45) expression -> . expression PlusSet expression
    (46) expression -> . expression MinusSet expression
    (47) expression -> . expression TimesSet expression
    (48) expression -> . expression DivSet expression
    (49) expression -> . expression ModSet expression
    (50) expression -> . expression LessThan expression
    (51) expression -> . expression LessThanEq expression
    (52) expression -> . expression GreaterThan expression
    (53) expression -> . expression GreaterThanEq expression
    (54) expression -> . expression Equals expression
    (55) expression -> . expression NotEquals expression
    (56) expression -> . expression Union expression
    (57) expression -> . expression Difference expression
    (58) expression -> . expression Intersect expression
    (59) expression -> . expression And expression
    (60) expression -> . expression Or expression
    (61) expression -> . expression Contains expression
    (62) expression -> . Minus expression
    (63) expression -> . Not expression
    (64) expression -> . Len expression
    (65) expression -> . MaxSet expression
    (66) expression -> . MinSet expression

    Number          shift and go to state 28
    True            shift and go to state 23
    False           shift and go to state 26
    String          shift and go to state 20
    ID              shift and go to state 25
    OpenCurly       shift and go to state 17
    OpenParen       shift and go to state 24
    Minus           shift and go to state 21
    Not             shift and go to state 22
    Len             shift and go to state 18
    MaxSet          shift and go to state 29
    MinSet          shift and go to state 19


    expression                     shift and go to state 48

state 19

    (66) expression -> MinSet . expression
    (27) expression -> . Number
    (28) expression -> . True
    (29) expression -> . False
    (30) expression -> . String
    (31) expression -> . ID
    (38) expression -> . OpenCurly set_elements_list CloseCurly
    (39) expression -> . OpenParen expression CloseParen
    (40) expression -> . expression Plus expression
    (41) expression -> . expression Minus expression
    (42) expression -> . expression Times expression
    (43) expression -> . expression Div expression
    (44) expression -> . expression Mod expression
    (45) expression -> . expression PlusSet expression
    (46) expression -> . expression MinusSet expression
    (47) expression -> . expression TimesSet expression
    (48) expression -> . expression DivSet expression
    (49) expression -> . expression ModSet expression
    (50) expression -> . expression LessThan expression
    (51) expression -> . expression LessThanEq expression
    (52) expression -> . expression GreaterThan expression
    (53) expression -> . expression GreaterThanEq expression
    (54) expression -> . expression Equals expression
    (55) expression -> . expression NotEquals expression
    (56) expression -> . expression Union expression
    (57) expression -> . expression Difference expression
    (58) expression -> . expression Intersect expression
    (59) expression -> . expression And expression
    (60) expression -> . expression Or expression
    (61) expression -> . expression Contains expression
    (62) expression -> . Minus expression
    (63) expression -> . Not expression
    (64) expression -> . Len expression
    (65) expression -> . MaxSet expression
    (66) expression -> . MinSet expression

    Number          shift and go to state 28
    True            shift and go to state 23
    False           shift and go to state 26
    String          shift and go to state 20
    ID              shift and go to state 25
    OpenCurly       shift and go to state 17
    OpenParen       shift and go to state 24
    Minus           shift and go to state 21
    Not             shift and go to state 22
    Len             shift and go to state 18
    MaxSet          shift and go to state 29
    MinSet          shift and go to state 19


    expression                     shift and go to state 49

state 20

    (30) expression -> String .

    Plus            reduce using rule 30 (expression -> String .)
    Minus           reduce using rule 30 (expression -> String .)
    Times           reduce using rule 30 (expression -> String .)
    Div             reduce using rule 30 (expression -> String .)
    Mod             reduce using rule 30 (expression -> String .)
    PlusSet         reduce using rule 30 (expression -> String .)
    MinusSet        reduce using rule 30 (expression -> String .)
    TimesSet        reduce using rule 30 (expression -> String .)
    DivSet          reduce using rule 30 (expression -> String .)
    ModSet          reduce using rule 30 (expression -> String .)
    LessThan        reduce using rule 30 (expression -> String .)
    LessThanEq      reduce using rule 30 (expression -> String .)
    GreaterThan     reduce using rule 30 (expression -> String .)
    GreaterThanEq   reduce using rule 30 (expression -> String .)
    Equals          reduce using rule 30 (expression -> String .)
    NotEquals       reduce using rule 30 (expression -> String .)
    Union           reduce using rule 30 (expression -> String .)
    Difference      reduce using rule 30 (expression -> String .)
    Intersect       reduce using rule 30 (expression -> String .)
    And             reduce using rule 30 (expression -> String .)
    Or              reduce using rule 30 (expression -> String .)
    Contains        reduce using rule 30 (expression -> String .)
    Comma           reduce using rule 30 (expression -> String .)
    $end            reduce using rule 30 (expression -> String .)
    SemiColon       reduce using rule 30 (expression -> String .)
    While           reduce using rule 30 (expression -> String .)
    Else            reduce using rule 30 (expression -> String .)
    CloseCurly      reduce using rule 30 (expression -> String .)
    CloseParen      reduce using rule 30 (expression -> String .)
    Do              reduce using rule 30 (expression -> String .)



state 21

    (62) expression -> Minus . expression
    (27) expression -> . Number
    (28) expression -> . True
    (29) expression -> . False
    (30) expression -> . String
    (31) expression -> . ID
    (38) expression -> . OpenCurly set_elements_list CloseCurly
    (39) expression -> . OpenParen expression CloseParen
    (40) expression -> . expression Plus expression
    (41) expression -> . expression Minus expression
    (42) expression -> . expression Times expression
    (43) expression -> . expression Div expression
    (44) expression -> . expression Mod expression
    (45) expression -> . expression PlusSet expression
    (46) expression -> . expression MinusSet expression
    (47) expression -> . expression TimesSet expression
    (48) expression -> . expression DivSet expression
    (49) expression -> . expression ModSet expression
    (50) expression -> . expression LessThan expression
    (51) expression -> . expression LessThanEq expression
    (52) expression -> . expression GreaterThan expression
    (53) expression -> . expression GreaterThanEq expression
    (54) expression -> . expression Equals expression
    (55) expression -> . expression NotEquals expression
    (56) expression -> . expression Union expression
    (57) expression -> . expression Difference expression
    (58) expression -> . expression Intersect expression
    (59) expression -> . expression And expression
    (60) expression -> . expression Or expression
    (61) expression -> . expression Contains expression
    (62) expression -> . Minus expression
    (63) expression -> . Not expression
    (64) expression -> . Len expression
    (65) expression -> . MaxSet expression
    (66) expression -> . MinSet expression

    Number          shift and go to state 28
    True            shift and go to state 23
    False           shift and go to state 26
    String          shift and go to state 20
    ID              shift and go to state 25
    OpenCurly       shift and go to state 17
    OpenParen       shift and go to state 24
    Minus           shift and go to state 21
    Not             shift and go to state 22
    Len             shift and go to state 18
    MaxSet          shift and go to state 29
    MinSet          shift and go to state 19


    expression                     shift and go to state 50

state 22

    (63) expression -> Not . expression
    (27) expression -> . Number
    (28) expression -> . True
    (29) expression -> . False
    (30) expression -> . String
    (31) expression -> . ID
    (38) expression -> . OpenCurly set_elements_list CloseCurly
    (39) expression -> . OpenParen expression CloseParen
    (40) expression -> . expression Plus expression
    (41) expression -> . expression Minus expression
    (42) expression -> . expression Times expression
    (43) expression -> . expression Div expression
    (44) expression -> . expression Mod expression
    (45) expression -> . expression PlusSet expression
    (46) expression -> . expression MinusSet expression
    (47) expression -> . expression TimesSet expression
    (48) expression -> . expression DivSet expression
    (49) expression -> . expression ModSet expression
    (50) expression -> . expression LessThan expression
    (51) expression -> . expression LessThanEq expression
    (52) expression -> . expression GreaterThan expression
    (53) expression -> . expression GreaterThanEq expression
    (54) expression -> . expression Equals expression
    (55) expression -> . expression NotEquals expression
    (56) expression -> . expression Union expression
    (57) expression -> . expression Difference expression
    (58) expression -> . expression Intersect expression
    (59) expression -> . expression And expression
    (60) expression -> . expression Or expression
    (61) expression -> . expression Contains expression
    (62) expression -> . Minus expression
    (63) expression -> . Not expression
    (64) expression -> . Len expression
    (65) expression -> . MaxSet expression
    (66) expression -> . MinSet expression

    Number          shift and go to state 28
    True            shift and go to state 23
    False           shift and go to state 26
    String          shift and go to state 20
    ID              shift and go to state 25
    OpenCurly       shift and go to state 17
    OpenParen       shift and go to state 24
    Minus           shift and go to state 21
    Not             shift and go to state 22
    Len             shift and go to state 18
    MaxSet          shift and go to state 29
    MinSet          shift and go to state 19


    expression                     shift and go to state 51

state 23

    (28) expression -> True .

    Plus            reduce using rule 28 (expression -> True .)
    Minus           reduce using rule 28 (expression -> True .)
    Times           reduce using rule 28 (expression -> True .)
    Div             reduce using rule 28 (expression -> True .)
    Mod             reduce using rule 28 (expression -> True .)
    PlusSet         reduce using rule 28 (expression -> True .)
    MinusSet        reduce using rule 28 (expression -> True .)
    TimesSet        reduce using rule 28 (expression -> True .)
    DivSet          reduce using rule 28 (expression -> True .)
    ModSet          reduce using rule 28 (expression -> True .)
    LessThan        reduce using rule 28 (expression -> True .)
    LessThanEq      reduce using rule 28 (expression -> True .)
    GreaterThan     reduce using rule 28 (expression -> True .)
    GreaterThanEq   reduce using rule 28 (expression -> True .)
    Equals          reduce using rule 28 (expression -> True .)
    NotEquals       reduce using rule 28 (expression -> True .)
    Union           reduce using rule 28 (expression -> True .)
    Difference      reduce using rule 28 (expression -> True .)
    Intersect       reduce using rule 28 (expression -> True .)
    And             reduce using rule 28 (expression -> True .)
    Or              reduce using rule 28 (expression -> True .)
    Contains        reduce using rule 28 (expression -> True .)
    Comma           reduce using rule 28 (expression -> True .)
    $end            reduce using rule 28 (expression -> True .)
    SemiColon       reduce using rule 28 (expression -> True .)
    While           reduce using rule 28 (expression -> True .)
    Else            reduce using rule 28 (expression -> True .)
    CloseCurly      reduce using rule 28 (expression -> True .)
    CloseParen      reduce using rule 28 (expression -> True .)
    Do              reduce using rule 28 (expression -> True .)



state 24
